--- a/pages/atherosclerosis/atherosclerosis.wxss
+++ b/pages/atherosclerosis/atherosclerosis.wxss
@@ -5,3 +5,27 @@
   align-items: center;
   justify-content: center;
 }
+
+.table{
+  border:black 1px solid;
+  margin: 20rpx 60rpx;
+}
+
+.tablehead{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: black 1px solid;
+  padding: 10rpx 0;
+}
+
+.tr{
+  display:flex;
+}
+
+.td{
+  width: 200rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
